PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Apr 2006, PHP 5.1.3RC4
- Fixed bug #37192 (cc may complain about non-constant initializers in
  hash_adler.c). (Mike)
- Fixed bug #37191 (chmod takes off sticky bit when safe_mode is On). (Tony)

20 Apr 2006, PHP 5.1.3RC3
- Fixed reading stream filters never notified about EOF. (Mike)
- Fixed bug #37167 (PDO segfaults when throwing exception from the fetch 
  handler). (Tony)
- Fixed bug #37162 (wddx does not build as a shared extension).  
  (jdolecek at NetBSD dot org, Ilia)
- Fixed bug #37158 (fread behavior changes after calling
  stream_wrapper_register). (Wez)
- Fixed bug #37138 (__autoload tries to load callback'ed self and parent).
  (Dmitry)
- Fixed bug #37103 (libmbfl headers not installed). (Jani)
- Fixed bug #37083 (Frequent crashes in SOAP extension with new WSDL caching
  code in multithread WS). (Andrei, Dmitry)
- Fixed bug #37062 (compile failure on ARM architecture). (Tony)
- Fixed bug #37061 (curl_exec() doesn't zero-terminate binary strings). (Tony)
- Fixed bug #37060 (Type of retval of Countable::count() is not checked). 
  (Johannes)
- Fixed bug #37059 (oci_bind_by_name() doesn't support RAW and LONG RAW 
  fields). (Tony)
- Fixed bug #37057 (xmlrpc_decode() may produce arrays with numeric strings, 
  which are unaccessible). (Tony)
- Fixed bug #37055 (incorrect reference counting for persistent OCI8 
  connections). (Tony)
- Fixed bug #37054 (SoapClient Error Fetching http headers). (Dmitry)
- Fixed bug #37053 (html_errors with internal classes produces wrong links). 
  (Tony)
- Fixed bug #37046 (foreach breaks static scope). (Dmitry)
- Fixed bug #37045 (Fixed check for special chars for http redirects). (Ilia)
- Fixed bug #37002 (Have to quote literals in INI when concatenating with
  vars). (Dmitry)
- Fixed Bug #36872 (session_destroy() fails after call to 